# agentifyme-ai

./: README.md  pyproject.toml
.github/workflows/: release.yml
agentifyme/: __init__.py  base_config.py  bootstrap.py  client.py  errors.py  logger.py
agentifyme/components/: base.py  task.py  utils.py  workflow.py
agentifyme/tasks/: task.py
agentifyme/utilities/: func_utils.py  grpc.py  meta.py
agentifyme/worker/: __init__.py  entrypoint.py  worker_service.py  workflows.py
agentifyme/worker/pb/api/v1/: common_pb2.py  common_pb2.pyi  gateway_pb2.py  gateway_pb2.pyi  gateway_pb2_grpc.py
agentifyme/worker/telemetry/: base.py  instrumentor.py
agentifyme/workflows/: workflow.py
images/debian/: Dockerfile  entrypoint.sh
tests/: __init__.py
tests/components/workflows/: test_advanced_workflows.py  test_email_workflows.py  test_workflow.py  test_workflow_config.py
tests/ml/llm/: test_anthropic.py  test_groq.py  test_openai.py
tests/prompt/: test_prompt.py
tests/tasks/: test_task.py  test_task_logger.py
tests/tasks/extractors/: test_json_data_extractor_task.py  test_pydantic_data_extractor_task.py
tests/utilities/func_utils/: test_async_workflow_functions.py  test_pydantic_functions.py  test_pydantic_multiple_args.py  test_workflow_functions.py
tests/utilities/meta/: test_complex_inputs.py  test_generate_function_metadata_inputs.py  test_meta.py  test_meta_return_types.py
tests/workflows/: test_nested_workflows.py  test_workflow.py  test_workflow_arguments.py  test_workflow_config.py
